modified heap sizes